fix: add missing center alignment for .bf-display-block-center utility

--- a/src/scss/utilities/_utility-layout.scss
+++ b/src/scss/utilities/_utility-layout.scss
@@ -86,6 +86,7 @@
   display: block !important;
   margin-left: auto !important;
   margin-right: auto !important;
+  text-align: center !important;
 }
 
 .bf-display-inline {
